--- a/sqs-starter/build.gradle
+++ b/sqs-starter/build.gradle
@@ -1,6 +1,9 @@
 dependencies {
+
+    // clients should bring their own Spring Boot version
+    compileOnly 'org.springframework.boot:spring-boot-starter'
+
     testImplementation project(':sqs-starter-test')
-    implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'com.amazonaws:aws-java-sdk-sqs:1.11.739'
     implementation 'io.github.resilience4j:resilience4j-retry:1.3.1'
 
