--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,8 @@
 plugins {
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
     id 'java'
-    id 'com.jfrog.bintray' version '1.8.1'
     id 'maven-publish'
-}
-
-ext{
-    bintrayUser = System.getProperty("bintray.user")
-    bintrayKey = System.getProperty("bintray.key")
-    buildNumber = System.getProperty("build.number")
+    id 'net.researchgate.release' version '2.8.1'
 }
 
 subprojects {
@@ -18,8 +12,6 @@ subprojects {
     apply plugin: 'java-library'
     apply plugin: 'jacoco'
     apply plugin: 'maven-publish'
-    
-    apply plugin: 'com.jfrog.bintray'
 
     version = '0.0.11-SNAPSHOT'
     sourceCompatibility = '8'
@@ -80,71 +72,21 @@ subprojects {
 
     test.finalizedBy jacocoTestReport
 
-    def pomConfig = {
-        licenses {
-            license {
-                name "MIT"
-                url "https://opensource.org/licenses/MIT"
-                distribution "repo"
-            }
-        }
-        developers {
-            developer {
-                id "thombergs"
-                name "Tom Hombergs"
-                email "tom.hombergs@gmail.com"
-            }
-        }
-
-        scm {
-            url "https://github.com/thombergs/sqs-starter"
-        }
-    }
-
     publishing {
-        publications {
-            mavenPublication(MavenPublication) {
-                from components.java
-                artifact sourcesJar {
-                    classifier "sources"
+        repositories {
+            maven {
+                name = "GitHubPackages"
+                url = uri("https://maven.pkg.github.com/CargoAi/sqs-library")
+                credentials {
+                    username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+                    password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
                 }
-                artifact javadocJar {
-                    classifier "javadoc"
-                }
-                groupId 'io.reflectoring'
-                artifactId project.name
-                version project.version
-                pom.withXml {
-                    def root = asNode()
-                    root.appendNode('description', 'A Spring Boot starter for robust SQS message handling and publishing.')
-                    root.appendNode('name', 'sqs-starter')
-                    root.appendNode('url', 'https://github.com/thombergs/sqs-starter')
-                    root.children().last() + pomConfig
+            }
+            publications {
+                gpr(MavenPublication) {
+                    from(components.java)
                 }
             }
         }
     }
-
-    bintray {
-        user = bintrayUser
-        key = bintrayKey
-        publications = ['mavenPublication']
-
-        pkg {
-            repo = 'maven-releases'
-            name = 'sqs-starter'
-            userOrg = 'reflectoring'
-            licenses = ['MIT']
-            vcsUrl = 'https://github.com/thombergs/sqs-starter'
-            version {
-                name = project.version
-                desc = "build ${buildNumber}"
-                released  = new Date()
-            }
-        }
-
-        publish = true
-    }
-
-
 }
