--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ subprojects {
     
     apply plugin: 'com.jfrog.bintray'
 
-    version = '0.0.11'
+    version = '0.0.12-SNAPSHOT'
     sourceCompatibility = '8'
 
     repositories {
